details page completed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,6 +25,7 @@
         <h3 routerLink="parent">parent</h3>
         <h3 routerLink="product">product</h3>
         <h3 routerLink="nav">nav</h3>
+        <h3 routerLink="create-student">Create student details</h3>
         <h3 routerLink="cartlist">cartlist</h3>
    
         <button (click)="logout()" class="logout">logout</button>
