--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -40,7 +40,8 @@
             <td>{{vehicle.fuel}}</td>
             <td>{{vehicle.type}}</td>
             <td>{{vehicle.id}}</td>
-            <td ><button class="btn btn-danger" (click)="delete(vehicle.id)">delete</button></td>
+            <td ><button class="btn btn-danger" (click)="delete(vehicle.id)">delete</button>
+            <button class="btn btn-success" (click)="view(vehicle.id)">view</button></td>
 
 
         </tr>
