--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -27,8 +27,9 @@
         <h3 routerLink="nav">nav</h3>
         <h3 routerLink="create-student">Create student details</h3>
         <h3 routerLink="cartlist">cartlist</h3>
+        <h3 routerLink="payment">make payment</h3>
    
-        <button (click)="logout()" class="logout">logout</button>
+        <button (click)="logout()" class="btn btn-secondary">logout</button>
 
     </div>
     <div class="child2">
