--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -3,7 +3,7 @@
     <p>{{item.title}}</p>
     <p>{{item.description}}</p>
     <p>{{item.category}}</p>
-    <p>{{item.price}}</p>
+    <p>{{item.price|price}}</p>
     <p>{{item.rating.rate}}</p>
     <app-star [rating]="item.rating.rate"></app-star>
     <p><img src="{{item.image}}"width="20%" height="20%" ></p>
