--- a/src/app/create-vehicle/create-vehicle.component.html
+++ b/src/app/create-vehicle/create-vehicle.component.html
@@ -4,8 +4,8 @@
     <label>vehicle</label>
     <input type="text" formControlName="Vehicle">
     <br>
-    <label>manufacturer</label>
-    <input type="text" formControlName="manufacture" >
+    <label>manufacture</label>
+    <input type="text" formControlName="manufacturer" >
     <br>
     <label>model</label>
     <input type="text" formControlName="model">
