--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -41,7 +41,9 @@
             <td>{{vehicle.type}}</td>
             <td>{{vehicle.id}}</td>
             <td ><button class="btn btn-danger" (click)="delete(vehicle.id)">delete</button>
-            <button class="btn btn-success" (click)="view(vehicle.id)">view</button></td>
+                <button class="btn btn-success" (click)="view(vehicle.id)">view</button>
+               <button class="btn btn-primary" (click)="edit(vehicle.id)">edit</button>
+            </td>
 
 
         </tr>
